<resources>
    <string name="app_name">Prerna Gati</string>
    <string name="slogan">Brings Opportunities For limitless learning</string>
    <string name="Get_Started">Get Started</string>
    <string name="Lets_Sign_Up">Sign up</string>
    <string name="teacher">Teacher</string>
    <string name="Sign_Up">Student</string>
    <string name="Enter_Email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget\nPassword</string>
    <string name="Login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="enter_full_name">Full Name</string>
    <string name="enter_username">User Name</string>
    <string name="_1_3">⅓</string>
    <string name="enter_phone_number">Phone number</string>
    <string name="_3_3">3/3</string>
    <string name="select_your_age">Select Your Age</string>
    <string name="other">Other</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="choose_gender">Choose Gender</string>
    <string name="_2_3">2/3</string>
    <string name="otp_code_text">Code</string>
    <string name="Verification">Verification</string>
    <string name="enter_otp_sent_on_your_number">Enter Otp sent on your number</string>
    <string name="verify_code">Verify Code</string>
    <string name="sign_in">sign in</string>
    <string name="forget_password_detail">Forget Password Details</string>
    <string name="Back_Button">Back Button</string>
    <string name="Make_Selection">Make\nSelection</string>
    <string name="via_sms">via sms</string>
    <string name="Make_Selection_Details">Make Selection Details</string>
    <string name="via_email">via email</string>
    <string name="new_credentials">New Credentials</string>
    <string name="new_credentials_detail">New Credential Details</string>
    <string name="update">Update</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="password_updated">Password Updated</string>
    <string name="password_updated_success_message">Your password has been updated</string>
    <string name="next">NEXT</string>
</resources>