<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".login">


    <TextView
        android:id="@+id/textView"
        android:layout_width="357dp"
        android:layout_height="39dp"
        android:text="@string/Lets_Sign_Up"
        android:textSize="30sp"
        android:fontFamily="@font/aclonica"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.729" />

    <Button
        android:id="@+id/login"
        android:layout_width="187dp"
        android:layout_height="54dp"
        android:backgroundTint="#2C799C"
        android:fontFamily="@font/aclonica"
        android:text="@string/Login"
        android:textSize="20sp"
        android:transitionName="transition_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.836" />

    <Button
        android:id="@+id/signup"
        android:layout_width="187dp"
        android:layout_height="54dp"
        android:backgroundTint="#2C799C"
        android:fontFamily="@font/aclonica"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:transitionName="transition_Signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.937" />

</androidx.constraintlayout.widget.ConstraintLayout>
