<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".OtpVerification">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <ImageView
            android:id="@+id/login_back_button"
            android:layout_width="49dp"
            android:layout_height="49dp"
            android:padding="5dp"
            android:src="@drawable/pngwing_com_4_"
            tools:ignore="ContentDescription"
            app:tint="@color/black" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_code_text"
            android:textSize="150sp"
            android:textColor="@color/black"
            android:fontFamily="@font/aclonica"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:includeFontPadding="false"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Verification"
            android:textSize="30sp"
            android:fontFamily="@font/aclonica"
            android:textColor="@color/black"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:includeFontPadding="false"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/aclonica"
            android:includeFontPadding="false"
            android:text="@string/enter_otp_sent_on_your_number"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <com.chaos.view.PinView
            android:id="@+id/pin_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:itemCount="6"
            app:itemWidth="50dp"
            android:height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            app:lineColor="@color/black"
            android:itemBackground="@color/white"
            style="@style/PinWidget.PinView"
            android:inputType="number"
            android:cursorVisible="true"
            app:cursorColor="@color/black"
            app:hideLineWhenFilled="true"
            app:itemRadius="5dp"/>


        <Button
            android:id="@+id/callNextScreenFromOTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FBC02D"
            android:text="@string/verify_code"
            android:layout_marginTop="30dp"
            android:onClick="callNextScreenFromOTP"
            android:textColor="@color/black"
             />



    </LinearLayout>





</ScrollView>