<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="30dp"
    tools:context=".MakeChoice">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="46dp"
            android:onClick="callBackScreenFromMakeSelection"
            android:padding="5dp"
            android:src="@drawable/pngwing_com_4_" />

        <TextView
            android:id="@+id/make_selection_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/aclonica"
            android:text="@string/Make_Selection"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/make_selection_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aclonica"
            android:text="@string/Make_Selection_Details"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <RelativeLayout
            android:id="@+id/make_selection_sms_box"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="50dp"
            android:background="@color/white"
            android:padding="10dp">

            <ImageView
                android:id="@+id/mobile_icon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:src="@drawable/smartphone" />

            <TextView
                android:id="@+id/mobile_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:textColor="@color/black"
                android:layout_toEndOf="@id/mobile_icon"
                android:fontFamily="@font/aclonica"
                android:text="@string/via_sms"
                android:textSize="20sp" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00ffffff"
                android:onClick="callOTPScreenFromMakeSelection" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/make_selection_mail_box"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:padding="10dp">

            <ImageView
                android:id="@+id/mail_icon"
                android:layout_width="60dp"
                android:layout_height="55dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:src="@drawable/email" />

            <TextView
                android:id="@+id/mail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:textColor="@color/black"
                android:layout_toEndOf="@id/mail_icon"
                android:fontFamily="@font/aclonica"
                android:text="@string/via_email"
                android:textSize="20sp" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00ffffff"/>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>
